Lint :: Java :: Code style issues :: Standard Charset object can be used